--- a/RS/Ramirez Seafood Custom/app.json
+++ b/RS/Ramirez Seafood Custom/app.json
@@ -1,7 +1,7 @@
 {
   "id": "e7eaa7db-db11-49ee-9ab1-3dcfe2a36563",
-  "name": "ALProject3",
-  "publisher": "Default Publisher",
+  "name": "Ramirez Customizations",
+  "publisher": "TBS",
   "version": "1.1.0.0",
   "brief": "",
   "description": "",
@@ -9,7 +9,7 @@
   "EULA": "",
   "help": "",
   "url": "",
-  "logo": "",
+  "logo": "logo/logo.png",
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
