--- a/iWeb/EncryptionProject/pom.xml
+++ b/iWeb/EncryptionProject/pom.xml
@@ -63,17 +63,6 @@
 		</dependency>
 		<dependency>
 			<groupId>
-				org.apache.santuario
-			</groupId>
-			<artifactId>
-				xmlsec
-			</artifactId>
-			<version>
-				2.2.1
-			</version>
-		</dependency>
-		<dependency>
-			<groupId>
 				org.hamcrest
 			</groupId>
 			<artifactId>
@@ -138,6 +127,45 @@
 				4.0.5
 			</version>
 		</dependency>
+		<dependency>
+			<groupId>
+				org.apache.santuario
+			</groupId>
+			<artifactId>
+				xmlsec
+			</artifactId>
+			<version>
+				4.0.2
+			</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.19.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>xml-security</groupId>
+			<artifactId>xmlsec</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -172,7 +200,7 @@
 				</version>
 				<configuration>
 					<mainClass>
-						com.example.CertificateLoader
+						com.example.XmlCrypto
 					</mainClass>
 				</configuration>
 			</plugin>
