--- a/iWeb/Citi Integration/.vscode/launch.json
+++ b/iWeb/Citi Integration/.vscode/launch.json
@@ -12,6 +12,7 @@
             "launchBrowser": true,                                                                                                                                      
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
+            "schemaUpdateMode": "ForceSync"
         }
     ]
 }
