--- a/Dynmx/Dynmx Ibanity Integration/.vscode/launch.json
+++ b/Dynmx/Dynmx Ibanity Integration/.vscode/launch.json
@@ -11,7 +11,8 @@
             "launchBrowser": true,
             "tenant": "4660b34b-8c06-490d-9b6e-1419d03001dc",
             "enableLongRunningSqlStatements": true,
-            "enableSqlInformationDebugger": true
+            "enableSqlInformationDebugger": true,
+            "schemaUpdateMode": "ForceSync"
         }
     ]
 }
