--- a/Dynmx/DynmxIbanityIntegration/.vscode/launch.json
+++ b/Dynmx/DynmxIbanityIntegration/.vscode/launch.json
@@ -5,15 +5,13 @@
             "name": "Microsoft cloud sandbox",
             "request": "launch",
             "type": "al",
+            "environmentName": "LEUS-QA-BE-001",
             "environmentType": "Sandbox",
-            "environmentName": "Ramirez_Sandbox",
-            "startupObjectId": 22,
-            "startupObjectType": "Page",
             "breakOnError": "All",
             "launchBrowser": true,
+            "tenant": "4660b34b-8c06-490d-9b6e-1419d03001dc",
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger": true,
-            "tenant": "1a804205-af0d-4b20-b696-292b463c287b"
         }
     ]
 }
