--- a/Dynmx/DynmxIbanityIntegration/app.json
+++ b/Dynmx/DynmxIbanityIntegration/app.json
@@ -1,19 +1,19 @@
 {
-  "id": "e7eaa7db-db11-49ee-9ab1-3dcfe2a36563",
-  "name": "Ramirez Customizations",
+  "id": "5e907f3d-9438-4c64-ad35-619ac0fe8a37",
+  "name": "Dynmx Ibanity Integration",
   "publisher": "TBS",
-  "version": "1.1.0.4",
+  "version": "1.0.0.0",
   "brief": "",
   "description": "",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
   "url": "",
-  "logo": "logo/logo.png",
+  "logo": "Logo/logo.png",
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
-  "application": "24.0.0.0",
+  "application": "23.0.0.0",
   "idRanges": [
     {
       "from": 50100,
