--- a/Dynmx/simple-signature/pom.xml
+++ b/Dynmx/simple-signature/pom.xml
@@ -19,5 +19,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-translate</artifactId>
+    <version>2.53.0</version>
+</dependency>
   </dependencies>
 </project>
