--- a/Dynmx/DynmxIbanityIntegration/app.json
+++ b/Dynmx/DynmxIbanityIntegration/app.json
@@ -27,8 +27,7 @@
   },
   "runtime": "13.0",
   "features": [
-    "TranslationFile", 
-    "GenerateCaptions",
-    "NoImplicitWith"
+    "NoImplicitWith",
+    "TranslationFile"
   ]
 }
